@@ -2,7 +2,13 @@
 #include "w3_Core.h"
 #include <shellapi.h>
 
+HWND ghParentWnd = 0;
+HANDLE ghStdOut = 0;
+HANDLE ghStdIn = 0;
+
 LRESULT CALLBACK WndProc(HWND, UINT, WPARAM, LPARAM);
+
+bool UpdateHotkeys();
 
 int WINAPI _tWinMain(HINSTANCE hInstance, HINSTANCE, LPTSTR lpCmdLine, int)
 {
@@ -17,10 +23,10 @@ int WINAPI _tWinMain(HINSTANCE hInstance, HINSTANCE, LPTSTR lpCmdLine, int)
 		return 1;
 	}
 
-	HWND parentWnd = (HWND)_wtol(argv[1]);
+	ghParentWnd = (HWND)_wtol(argv[1]);
 	LocalFree(argv);
 
-	if(parentWnd == 0)
+	if(ghParentWnd == 0)
 	{
 		RELEASE_MESSAGE("64-bit stub error",
 			"Failed to get the main window of w3wm");
@@ -55,16 +61,26 @@ int WINAPI _tWinMain(HINSTANCE hInstance, HINSTANCE, LPTSTR lpCmdLine, int)
 		return 1;
 	}
 
-	// Send hwnd to main w3wm process
-	HANDLE hStdout = GetStdHandle(STD_OUTPUT_HANDLE);
-	if(hStdout == INVALID_HANDLE_VALUE)
+	// Get stdin and stdout handles
+	ghStdIn = GetStdHandle(STD_INPUT_HANDLE);
+	if(ghStdIn == INVALID_HANDLE_VALUE)
 	{
-		RELEASE_MESSAGE("Stub Error", "Failed to get the output handle.");
+		RELEASE_MESSAGE("Stub Error", "Failed to get the input handle.");
 		return 1;
 	}
 
+	ghStdOut = GetStdHandle(STD_OUTPUT_HANDLE);
+	if(ghStdOut == INVALID_HANDLE_VALUE)
+	{
+		RELEASE_MESSAGE("Stub Error", "Failed to get the output handle.");
+		CloseHandle(ghStdIn);
+		return 1;
+	}
+
+	// Send hwnd to main w3wm process
 	DWORD bytesWritten;
-	if(!WriteFile(hStdout, &hwnd, sizeof(unsigned long), &bytesWritten, NULL))
+	if(!WriteFile(ghStdOut, &hwnd, sizeof(unsigned long), &bytesWritten, NULL) ||
+		bytesWritten != sizeof(unsigned long))
 	{
 		RELEASE_MESSAGE("Stub Error", "Failed to send the window handle to the main w3wm process.");
 		return 1;
@@ -89,12 +105,73 @@ LRESULT CALLBACK WndProc(HWND hWnd, UINT message, WPARAM wParam, LPARAM lParam)
 		PostQuitMessage(WM_QUIT);
 		break;
 	case WM_HOTKEY:
-		// Send lParam to parent
-		// TODO
+		// Forward message to parent
+		PostMessage(ghParentWnd, WM_HOTKEY, wParam, lParam);
 		break;
+	case WM_STUBCOMM:
+		switch(wParam)
+		{
+		case ESM_INJECT_DLL:
+			InstallHooks(hWnd);
+			break;
+		case ESM_WITHDRAW_DLL:
+			RemoveHooks();
+			break;
+		case ESM_UPDATE_HOTKEYS:
+			if(!UpdateHotkeys())
+			{
+				DEBUG_MESSAGE("Stub Error", "Failed to update the hotkeys");
+			}
+			break;
+		}
 	default:
 		return DefWindowProc(hWnd, message, wParam, lParam);
 	}
 
 	return 0;
+}
+
+bool UpdateHotkeys()
+{
+	// Read message size from stdin
+	DWORD bytesRead;
+	DWORD msgSize;
+	if(!ReadFile(ghStdIn, &msgSize, sizeof(DWORD), &bytesRead, NULL) ||
+		bytesRead != sizeof(DWORD))
+	{
+		DEBUG_MESSAGE("Stub Warning", "Failed to read hotkey message size.");
+		return false;
+	}
+
+	// Read hotkey size from stdin
+	DWORD hotkeySize;
+	if(!ReadFile(ghStdIn, &hotkeySize, sizeof(DWORD), &bytesRead, NULL) ||
+		bytesRead != sizeof(DWORD))
+	{
+		DEBUG_MESSAGE("Stub Warning", "Failed to read hotkey size.");
+		return false;
+	}
+
+	// Allocate memory for full message
+	HotkeyDef *pDefs = (HotkeyDef*)malloc(msgSize);
+	if(!pDefs)
+	{
+		DEBUG_MESSAGE("Stub Warning", "Failed to allocate memory for hotkey message.");
+		return false;
+	}
+
+	// Read hotkey message from stdin
+	if(!ReadFile(ghStdIn, pDefs, msgSize, &bytesRead, NULL) ||
+		bytesRead != msgSize)
+	{
+		DEBUG_MESSAGE("Stub Warning", "Failed to get hotkey message from stdin.");
+		free(pDefs);
+		return false;
+	}
+
+	// Inform 64-bit DLL of hotkey mappings
+	SetHotkeys(pDefs, msgSize/hotkeySize);
+
+	free(pDefs);
+	return true;
 }
